--- a/ProjectManagement/Views/Shared/_Layout.cshtml
+++ b/ProjectManagement/Views/Shared/_Layout.cshtml
@@ -12,14 +12,14 @@
     <!-- MDB -->
     <link href="~/mdb/css/mdb-admin.min.css" rel="stylesheet" />
     <!-- Custom style -->
-    <link href="~/css/public-master.css?v=1" rel="stylesheet" />
+    <link href="~/css/public-master.css" rel="stylesheet" />
 
     <!-- Others page style -->
     @await RenderSectionAsync("Styles", false)
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm top-bar">
+        <nav class="navbar navbar-expand-sm">
             <div class="container">
                 <ul class="nav navbar-nav nav-flex-icons ml-auto">
                     <partial name="_LoginPartial" />
