--- a/ProjectManagement/Views/Shared/_Layout.cshtml
+++ b/ProjectManagement/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"]</title>
+    <title>@ViewData["Title"] - Project Management</title>
 
     <!-- Font Awesome -->
     <link href="https://pro.fontawesome.com/releases/v5.8.2/css/all.css" rel="stylesheet" />
@@ -12,18 +12,24 @@
     <!-- MDB -->
     <link href="~/mdb/css/mdb-admin.min.css" rel="stylesheet" />
     <!-- Custom style -->
-    <link href="~/css/public-master.css" rel="stylesheet" />
+    <link href="~/css/custom-layout.css?v=.1" rel="stylesheet" />
 
     <!-- Others page style -->
     @await RenderSectionAsync("Styles", false)
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm">
+        <nav class="mb-1 navbar navbar-expand-lg navbar-dark">
             <div class="container">
-                <ul class="nav navbar-nav nav-flex-icons ml-auto">
-                    <partial name="_LoginPartial" />
-                </ul>
+                <a class="navbar-brand" href="#">Project Management</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarContent">
+                    <ul class="navbar-nav ml-auto">
+                        <partial name="_LoginPartial" />
+                    </ul>
+                </div>
             </div>
         </nav>
     </header>
@@ -32,7 +38,7 @@
         @RenderBody()
     </main>
 
-    <footer class="page-footer font-small mt-4 footer-bg">
+    <footer class="page-footer font-small mt-4">
     </footer>
 
 
