--- a/ProjectManagement/wwwroot/css/side-navbar.css
+++ b/ProjectManagement/wwwroot/css/side-navbar.css
@@ -1,5 +1,5 @@
 ﻿
-#header { z-index: 5; transition: left 0.2s; }
+header { z-index: 5; transition: left 0.2s; }
 #sidedrawer { background-color: #fff; position: fixed; top: 0; bottom: 0; width: 250px; left: -250px; overflow: auto; z-index: 2; transition: transform 0.2s; }
 #content-wrapper { min-height: 830px; overflow-x: auto; padding: 15px 0; margin-left: 0; transition: margin-left 0.2s; }
 
@@ -34,12 +34,12 @@
 #sidedrawer strong + ul > li:first-child { padding: 0 0 0 24px; }
 
 @media (min-width: 768px) {
-    #header { margin-left: 250px; }
+    header { margin-left: 250px; }
     #sidedrawer { transform: translate(250px); }
     #content-wrapper { margin-left: 250px; }
     footer { margin-left: 250px; }
 
-    body.hide-sidedrawer #header { margin-left: 0; }
+    body.hide-sidedrawer header { margin-left: 0; }
     body.hide-sidedrawer #sidedrawer { transform: translate(0); }
     body.hide-sidedrawer #content-wrapper { margin-left: 0; }
     body.hide-sidedrawer footer { margin-left: 0; }
