--- a/ProjectManagement/wwwroot/css/custom-layout.css
+++ b/ProjectManagement/wwwroot/css/custom-layout.css
@@ -4,3 +4,7 @@
 header nav { background-color: var(--bg-primary) }
 .btn-custom-bg { background-color: var(--bg-light);color: #fff}
 .btn-custom-bg:hover { background-color: var(--bg-primary); color: #fff }
+
+main { min-height: 81vh;}
+
+footer{ background-color: var(--bg-primary) }
