--- a/ProjectManagement/Views/Account/Login.cshtml
+++ b/ProjectManagement/Views/Account/Login.cshtml
@@ -1,11 +1,11 @@
 ﻿@model LoginViewModel
 @{
-    ViewData["Title"] = "Home";
+    ViewData["Title"] = "Login";
     Layout = "_Layout";
 }
 
 @section Styles{
-    <link href="~/pages-css/home.css" rel="stylesheet" />
+    <link href="~/pages-css/login.css" rel="stylesheet" />
 }
 
 <div class="container">
@@ -13,10 +13,10 @@
         <div class="row">
             <div class="col-md-7 col-lg-8">
                 <div class="info-container">
-                    <h2>Company History</h2>
+                    <h2>History</h2>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised</p>
 
-                    <h2 class="mt-5">Company Working Area</h2>
+                    <h2 class="mt-5">Working Area</h2>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem</p>
                 </div>
             </div>
@@ -28,18 +28,25 @@
 
                     <form asp-route-returnUrl="@ViewBag.ReturnUrl" class="form-signin" asp-controller="Account" asp-action="Login" method="post">
                         <div class="md-form mb-5 pb-3">
+                            <i class="fas fa-user prefix grey-text"></i>
                             <input asp-for="UserName" class="form-control" required>
                             <label asp-for="UserName"></label>
                             <span asp-validation-for="UserName"></span>
                         </div>
                         <div class="md-form mb-5 pb-3">
+                            <i class="fas fa-lock prefix grey-text"></i>
                             <input asp-for="Password" class="form-control" type="password" required>
                             <label asp-for="Password"></label>
                             <span asp-validation-for="Password"></span>
                         </div>
 
                         <button class="btn btn-block btn-rounded btn-custom-bg z-depth-1a mb-3" type="submit">Sign in</button>
-                        <div asp-validation-summary="ModelOnly"></div>
+                
+                        <div asp-validation-summary="ModelOnly" class="alert alert-danger alert-dismissible fade show" role="alert">
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
                     </form>
                 </div>
             </div>
