--- a/ProjectManagement/wwwroot/css/custom-layout.css
+++ b/ProjectManagement/wwwroot/css/custom-layout.css
@@ -8,3 +8,15 @@ header nav { background-color: var(--bg-primary) }
 main { min-height: 81vh;}
 
 footer{ background-color: var(--bg-primary) }
+
+/* validation helpers */
+.field-validation-error { color: #ee2420; font-size: .85rem; }
+.field-validation-valid { display: none; }
+
+input.input-validation-error { border-bottom: 1px solid #b94a48 !important; }
+input[type="checkbox"].input-validation-error { border: 0 none; }
+
+.validation-summary-errors { color: #b94a48; }
+.validation-summary-errors ul { padding: 0; margin: 0; list-style: none; }
+.validation-summary-valid { display: none; }
+
