--- a/ProjectManagement/wwwroot/pages-css/login.css
+++ b/ProjectManagement/wwwroot/pages-css/login.css
@@ -4,3 +4,7 @@
 .info-container p { color: #4f4f4f; line-height: 1.6rem; }
 
 .login-container { padding: 2rem 2rem 0 0; }
+
+@media (max-width: 767.98px) {
+    .login-container { padding: 2rem; }
+}
