--- a/ProjectManagement/Views/Shared/_Layout.cshtml
+++ b/ProjectManagement/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <!-- Bootstrap core CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
     <!-- MDB -->
-    <link href="~/mdb/css/mdb-admin.min.css" rel="stylesheet" />
+    <link href="~/mdb/css/mdb-admin.min.css?v=.1" rel="stylesheet" />
     <!-- Custom style -->
     <link href="~/css/custom-layout.css?v=.1" rel="stylesheet" />
 
