--- a/ProjectManagement/wwwroot/css/admin-layout.css
+++ b/ProjectManagement/wwwroot/css/admin-layout.css
@@ -1,4 +1,5 @@
-﻿
+﻿body { background-color: #e9f2f9; }
+
 :root { --bg-primary: #19c2f3; --bg-light: #17c0f2; --bg-secondary: #0a4da2; --color-primary: #19c2f3; --color-secondary: #0a4da2; }
 
 .page-header { font-weight: 500; text-transform: uppercase; margin-bottom: 0 }
