--- a/ProjectManagement/wwwroot/css/custom-layout.css
+++ b/ProjectManagement/wwwroot/css/custom-layout.css
@@ -1,4 +1,5 @@
-﻿
+﻿body { background-color: #e9f2f9; }
+
 :root { --bg-primary: #19c2f3; --bg-light: #17c0f2; --bg-secondary: #0a4da2; }
 
 header nav { background-color: var(--bg-primary) }
