--- a/ProjectManagement/Views/Settings/ProjectStatus.cshtml
+++ b/ProjectManagement/Views/Settings/ProjectStatus.cshtml
@@ -8,47 +8,56 @@
 
 <div class="container">
     <h4 class="page-header mb-3">Project Status</h4>
-    <div class="card card-body">
+    <div class="card mb-3 px-3 py-2">
         <form id="formAdd">
-            <div class="row">
-                <div class="col">
-                    <div class="md-form">
-                        <label for="inputStatus">Status</label>
-                        <input id="inputStatus" type="text" required class="form-control">
-                    </div>
-                </div>
-                <div class="col">
-                    <input type="submit" value="Add" class="btn btn-custom-bg md-form" />
+            <div class="md-form input-group">
+                <input id="inputStatus" type="text" class="form-control" required>
+                <label for="inputStatus">Project Status</label>
+
+                <div class="input-group-append">
+                    <button class="btn btn-md btn-custom-bg m-0 px-3" type="submit">Add Status</button>
                 </div>
             </div>
+            <span id="error" class="red-text"></span>
         </form>
     </div>
-    
-    <ul class="list-group list-group-flush">
-        @foreach (var item in Model)
-        {
-            <li class="list-group-item">@item.Status</li>
-        }
-    </ul>
-    
+
+    <div class="card card-body">
+        <ul class="list-group list-group-flush">
+            @foreach (var item in Model)
+            {
+                <li class="list-group-item">
+                    <strong>@item.Status</strong>
+                </li>
+            }
+        </ul>
+    </div>
 </div>
 
 @section Scripts{
     <script>
         const formAdd = document.getElementById("formAdd");
-        formAdd.addEventListener("submit", function (evt) {
+        const error = document.getElementById("error");
+
+        formAdd.addEventListener("submit", function(evt) {
             evt.preventDefault();
 
             const model = { Status: this.inputStatus.value }
 
             $.ajax({
-                url: "Settings/PostProjectStatus",
+                url: "/Settings/PostProjectStatus",
                 type: "POST",
                 data: model,
-                success: function (response) {
+                success: function(response) {
                     console.log(response);
+                    if (response.IsSuccess) {
+                        location.reload();
+                        return;
+                    }
+
+                    error.textContent = response.Message;
                 },
-                error: function (err) {
+                error: function(err) {
                     console.log(err);
                 }
             });
