--- a/ProjectManagement/Views/Shared/_AdminLoginPartial.cshtml
+++ b/ProjectManagement/Views/Shared/_AdminLoginPartial.cshtml
@@ -13,11 +13,11 @@
                     @UserManager.GetUserName(User)
                 </a>
                 <div class="dropdown-menu dropdown-dark" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="/Dashboard/Profile">
+                    <a class="dropdown-item" href="#">
                         <i class="fal fa-user"></i>
                         Profile
                     </a>
-                    <a class="dropdown-item" href="/Account/ChangePassword">
+                    <a class="dropdown-item" href="#">
                         <i class="fal fa-lock"></i>
                         Change Password
                     </a>
