--- a/ProjectManagement/Views/Projects/AddProject.cshtml
+++ b/ProjectManagement/Views/Projects/AddProject.cshtml
@@ -5,11 +5,7 @@
 }
 
 @section Styles{
-    <style>
-        .select-wrapper input.select-dropdown { margin: 0 0 .50rem; }
-        fieldset legend { color: #484848; padding: 0 5px; font-size: 1.3rem; }
-        #formAdd { display: none }
-    </style>
+    <link href="~/pages-css/add-project.css?v=1" rel="stylesheet" />
 }
 
 <div class="container">
@@ -23,6 +19,11 @@
 
     <form id="formStep">
         <div class="card card-body">
+            <ul id="progressbar">
+                <li class="active">Step 1</li>
+                <li>Step 2</li>
+            </ul>
+
             <div class="row">
                 <div class="col-lg-6">
                     <div class="md-form">
@@ -101,13 +102,11 @@
                     <div class="col-lg-4">
                         <select id="selectState" class="mdb-select md-form m-0" searchable="Search here.." required>
                             <option value="" disabled selected>State</option>
-                            <option value="1">State</option>
                         </select>
                     </div>
                     <div class="col-lg-4">
                         <select id="selectCity" class="mdb-select md-form m-0" searchable="Search here.." required>
                             <option value="" disabled selected>City</option>
-                            <option value="1">City</option>
                         </select>
                     </div>
                 </div>
@@ -149,18 +148,7 @@
                         </th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
-                        <td>Male</td>
-                        <td>10</td>
-                        <td class="text-center"><i class="far fa-trash-alt text-red"></i></td>
-                    </tr>
-                    <tr>
-                        <td>Male</td>
-                        <td>10</td>
-                        <td class="text-center"><i class="far fa-trash-alt"></i></td>
-                    </tr>
-                </tbody>
+                <tbody></tbody>
             </table>
         </div>
 
@@ -219,7 +207,6 @@
             pathInput.value = e.target.files[0].name;
         });
 
-
         //global model
         const model = {};
 
@@ -235,20 +222,15 @@
         selectCountry.addEventListener("change", function () {
             const id = +this.value
 
-            //$('.product-select').materialSelect("destroy");
-            //$('.product-select').materialSelect();
-
             if (!id) return;
 
             $.ajax({
                 url: "/Projects/GetStateByCountry",
                 data: { id },
                 success: function (response) {
-                    console.log(response)
                     if (!response.IsSuccess) return;
 
                     const fragment = document.createDocumentFragment();
-
                     const option1 = document.createElement("option");
                     option1.value = "";
                     option1.text = "State";
@@ -258,12 +240,14 @@
 
                     response.Data.forEach(item => {
                         const option = document.createElement("option");
-                        option.value = item.StateId;
-                        option.text = item.StateName;
+                        option.value = item.value;
+                        option.text = item.label;
                         fragment.appendChild(option);
                     });
 
                     selectState.innerHTML = "";
+                    selectCity.innerHTML = "";
+
                     selectState.appendChild(fragment);
                 },
                 error: function (err) {
@@ -272,13 +256,48 @@
             });
         });
 
+        //on change state
+        selectState.addEventListener("change", function () {
+            const id = +this.value
+
+            if (!id) return;
+
+            $.ajax({
+                url: "/Projects/GetCityByState",
+                data: { id },
+                success: function (response) {
+                    if (!response.IsSuccess) return;
+
+                    const fragment = document.createDocumentFragment();
+                    const option1 = document.createElement("option");
+                    option1.value = "";
+                    option1.text = "City";
+                    option1.setAttribute("disabled", "disabled");
+                    option1.setAttribute("selected", true);
+                    fragment.appendChild(option1);
+
+                    response.Data.forEach(item => {
+                        const option = document.createElement("option");
+                        option.value = item.value;
+                        option.text = item.label;
+                        fragment.appendChild(option);
+                    });
+
+                    selectCity.innerHTML = "";
+                    selectCity.appendChild(fragment);
+                },
+                error: function (err) {
+                    console.log(err);
+                }
+            });
+        });
 
         //first step
         formStep.addEventListener("submit", function (evt) {
             evt.preventDefault();
 
-            this.style.display = "none";
-            formAdd.style.display = "block";
+            //this.style.display = "none";
+            //formAdd.style.display = "block";
         });
 
         //post project
