--- a/ProjectManagement/Views/Settings/ProjectDonor.cshtml
+++ b/ProjectManagement/Views/Settings/ProjectDonor.cshtml
@@ -6,7 +6,7 @@
 @section Styles
 {
     <style>
-        .list-group-item h5 {margin-bottom: .3rem; font-weight: bold; color: #484848 }
+        .list-group-item h5 { margin-bottom: .3rem; font-weight: bold; color: #484848 }
         .list-group-item span { color: #6a6969; font-size: .9rem; }
     </style>
 }
@@ -46,21 +46,67 @@
         <ul class="list-group list-group-flush">
             @foreach (var item in Model)
             {
-                <li class="list-group-item">
-                    <h5><i class="fas fa-user mr-1"></i>@item.Name</h5>
-                    <span class="mr-2"><i class="fas fa-phone mr-1"></i>@item.Phone</span>
-                    <span><i class="fas fa-envelope mr-1"></i>@item.Email</span>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    <div>
+                        <h5><i class="fas fa-user mr-1"></i>@item.Name</h5>
+                        <span class="mr-2"><i class="fas fa-phone mr-1"></i>@item.Phone</span>
+                        <span><i class="fas fa-envelope mr-1"></i>@item.Email</span>
+                    </div>
+                    <a data-id="@item.DonorId" data-name="@item.Name" data-phone="@item.Phone" data-email="@item.Email" class="far fa-edit btnUpdate"></a>
                 </li>
             }
         </ul>
     </div>
 </div>
 
+
+<!--update modal-->
+<div class="modal fade" id="updateModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-notify modal-info" role="document">
+        <div class="modal-content">
+            <div class="modal-header text-center">
+                <h4 class="modal-title white-text w-100 font-weight-bold">Update</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true" class="white-text">&times;</span>
+                </button>
+            </div>
+
+            <div class="modal-body">
+                <form id="formUpdate">
+                    <input type="hidden" id="hiddenUpdateId">
+                    <div class="form-group">
+                        <label for="updateName" class="active">Donor Name</label>
+                        <input type="text" id="updateName" class="form-control" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="updatePhone">Donor Phone</label>
+                        <input id="updatePhone" type="text" class="form-control" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="updateEmail">Donor Email</label>
+                        <input id="updateEmail" type="email" class="form-control" required>
+                    </div>
+
+                    <div class="d-flex justify-content-center mt-4">
+                        <button type="submit" class="btn btn-outline-info waves-effect">Update <i class="fas fa-paper-plane-o ml-1"></i></button>
+                    </div>
+                </form>
+                <span id="error2" class="red-text"></span>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 @section Scripts{
     <script>
         const formAdd = document.getElementById("formAdd");
+        const formUpdate = document.getElementById("formUpdate");
         const error = document.getElementById("error");
+        const listContainer = document.querySelector(".list-group");
+        const modalContainer = $("#updateModal");
 
+        //insert
         formAdd.addEventListener("submit", function (evt) {
             evt.preventDefault();
 
@@ -82,6 +128,50 @@
                     }
 
                     error.textContent = response.Message;
+                },
+                error: function (err) {
+                    console.log(err);
+                }
+            });
+        });
+
+        //on edit
+        listContainer.addEventListener("click", function(evt) {
+            const element = evt.target;
+            const onUpdate = element.classList.contains("btnUpdate");
+
+            if (!onUpdate) return;
+
+            formUpdate.hiddenUpdateId.value = element.getAttribute("data-id");
+            formUpdate.updateName.value = element.getAttribute("data-name");
+            formUpdate.updatePhone.value = element.getAttribute("data-phone");
+            formUpdate.updateEmail.value = element.getAttribute("data-email");
+
+            modalContainer.modal("show");
+        });
+
+        //update
+        formUpdate.addEventListener("submit", function (evt) {
+            evt.preventDefault();
+
+            const model = {
+                DonorId: this.hiddenUpdateId.value,
+                Name: this.updateName.value,
+                Phone: this.updatePhone.value,
+                Email: this.updateEmail.value
+            }
+
+            $.ajax({
+                url: "/Settings/UpdateProjectDonor",
+                type: "POST",
+                data: model,
+                success: function (response) {
+                    if (response.IsSuccess) {
+                        location.reload();
+                        return;
+                    }
+
+                    error2.textContent = response.Message;
                 },
                 error: function (err) {
                     console.log(err);
